--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE HTML>
 <html lang="en" ng-app="myApp">
 <head>
+    <!--These would be taken from a CDN server in production-->
     <script src="lib/angular.min.js"></script>
-    <script src="lib/canvasjs.min.js"></script>
-    <script src="js/controllers.js"></script>
-    <!-- Bootstrap -->
+    <script src="lib/Chart.min.js"></script>
+    <script src="lib/angular-chart.js"></script>
+    <script src="js/app.js"></script>
     <link href="lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/angular-chart.js/angular-chart.css">
 </head>
 <body>
-<div>
-<div ng-controller="MyController">
-    <div class="search">
-        <h1>Date Range</h1>
-        <input type="date" ng-model="query">
+<div class="main" ng-controller="PricesController">
+    <div class="container">
+        <h1>BitCoin Prices in {{ displayCurrency }}</h1>
+        <form>
+            Start: <input type="date" ng-model="startDate" value="startDate">
+            End : <input type="date" ng-model="endDate" value="endDate">
+            <select ng-model="currency" value="currency">
+                <option value="EUR">EUR</option>
+                <option value="GBP">GBP</option>
+                <option value="USD">USD</option>
+                <option value="CNY">CNY</option>
+            </select>
+            <button ng-click="getData()">Update</button>
+        </form>
+
+
+    <canvas id="line" class="chart chart-line" data="data"
+            labels="labels" legend="true" series="series"
+            click="onClick" options="options">
+    </canvas>
     </div>
-    <table>
-        <tr>
-            <th>Month</th>
-            <th>Savings</th>
-        </tr>
-        <tr ng-repeat="(key, value) in prices">
-            <td>{{key | date:'medium'}}</td>
-            <td>{{value}}</td>
-        </tr>
-    </table>
 </div>
-</div>
-<script src="lib/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
