--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="main" ng-controller="PricesController">
     <div class="container">
-        <h1>BitCoin Prices in {{ displayCurrency }}</h1>
+        <h1>Bitcoin Prices in {{ displayCurrency }}</h1>
         <form>
             Start: <input type="date" ng-model="startDate" value="startDate">
             End : <input type="date" ng-model="endDate" value="endDate">
