--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <!--These would be taken from a CDN server in production-->
     <script src="lib/angular.min.js"></script>
-    <script src="lib/Chart.min.js"></script>
-    <script src="lib/angular-chart.js"></script>
+    <script src="lib/angular.min.js.map"></script>
+    <script src="lib/d3.min.js"></script>
+    <script src="lib/line-chart.min.js"></script>
     <script src="js/app.js"></script>
     <link href="lib/bootstrap-3.3.5-dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="lib/angular-chart.js/angular-chart.css">
 </head>
 <body>
 <div class="main" ng-controller="PricesController">
     <div class="container">
-        <h1>Bitcoin Prices in {{ displayCurrency }}</h1>
+        <div class="container">
+        <h1>BitCoin Prices in {{ displayCurrency }}</h1>
+        <h2>{{ errorMessage }}</h2>
+
         <form>
             Start: <input type="date" ng-model="startDate" value="startDate">
             End : <input type="date" ng-model="endDate" value="endDate">
@@ -24,12 +27,13 @@
             </select>
             <button ng-click="getData()">Update</button>
         </form>
+            </div>
 
+        <div class="container">
 
-    <canvas id="line" class="chart chart-line" data="data"
-            labels="labels" legend="true" series="series"
-            click="onClick" options="options">
-    </canvas>
+        <linechart data="data" options="options"></linechart>
+
+        </div>
     </div>
 </div>
 </body>
